[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scanes/Server/network_setup.gd" type="Script" id=1]
[ext_resource path="res://Scanes/menu font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scanes/Lobby/LOBBY.tscn" type="PackedScene" id=3]

[node name="server_gui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="JOINMENU" type="Container" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
script = ExtResource( 1 )

[node name="NAME" type="LineEdit" parent="JOINMENU"]
anchor_right = 1.0
margin_left = -400.0
margin_top = -450.0
margin_right = -40.0
margin_bottom = -460.0
rect_min_size = Vector2( 800, 120 )
custom_fonts/font = ExtResource( 2 )
align = 1
max_length = 15
placeholder_text = "DAWAJ NAZWÄ˜"

[node name="IP" type="LineEdit" parent="JOINMENU"]
anchor_right = 1.0
margin_left = -400.0
margin_top = -290.0
margin_right = 360.0
margin_bottom = -170.0
rect_min_size = Vector2( 800, 120 )
custom_fonts/font = ExtResource( 2 )
align = 1
max_length = 15
placeholder_text = "127.0.0.1"

[node name="HOST" type="Button" parent="JOINMENU"]
margin_left = -300.0
margin_top = 180.0
margin_right = 300.0
margin_bottom = 360.0
rect_min_size = Vector2( 600, 180 )
custom_fonts/font = ExtResource( 2 )
text = "HOST"

[node name="JOIN" type="Button" parent="JOINMENU"]
margin_left = -300.0
margin_top = -90.0
margin_right = 300.0
margin_bottom = 90.0
rect_min_size = Vector2( 600, 180 )
custom_fonts/font = ExtResource( 2 )
text = "JOIN"

[node name="LOBBY" parent="." instance=ExtResource( 3 )]

[connection signal="text_changed" from="JOINMENU/NAME" to="JOINMENU" method="_on_NAME_text_changed"]
[connection signal="text_changed" from="JOINMENU/NAME" to="JOINMENU" method="_on_IP_text_changed"]
[connection signal="text_changed" from="JOINMENU/IP" to="JOINMENU" method="_on_IP_text_changed"]
[connection signal="pressed" from="JOINMENU/HOST" to="JOINMENU" method="_on_HOST_pressed"]
[connection signal="pressed" from="JOINMENU/JOIN" to="JOINMENU" method="_on_JOIN_pressed"]
